ci/base/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: abdigital-gateway
  namespace: nginx-gateway
spec:
  gatewayClassName: nginx 
  listeners:
 
  - name: cms-https
    protocol: HTTPS
    port: 443
    hostname: "example.com"  
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        group: ""
        name: airborneo-cms-tls
        namespace: airborneo-cms-uat
    allowedRoutes:
      namespaces:
        from: All 

  - name: cms-http
    hostname: "example.com"   
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All     

  - name: web-http
    hostname: "example.com"       
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All     
  - name: web-https
    protocol: HTTPS
    port: 443
    hostname: "example.com"        
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        group: ""
        name: airborneo-web-tls
        namespace: airborneo-web-uat
    allowedRoutes:
      namespaces:
        from: All 

# ---
# apiVersion: gateway.networking.k8s.io/v1beta1
# kind: ReferenceGrant
# metadata:
#   name: allow-nginx-gateway-to-ref-secrets
#   namespace: airborneo-cms-uat
# spec:
#   from:
#   - group: gateway.networking.k8s.io
#     kind: Gateway
#     namespace: nginx-gateway 
#   to:
#   - group: ""
#     kind: Secret
# ---
# apiVersion: gateway.networking.k8s.io/v1beta1
# kind: ReferenceGrant
# metadata:
#   name: allow-nginx-gateway-to-ref-secrets
#   namespace: airborneo-web-uat
# spec:
#   from:
#   - group: gateway.networking.k8s.io
#     kind: Gateway
#     namespace: nginx-gateway 
#   to:
#   - group: ""
#     kind: Secret
